--- a/movements/templates/base.html
+++ b/movements/templates/base.html
@@ -11,7 +11,7 @@
         </header>
 
         <section>
-            {% block content %} {% endblock %}
+            {% block mi_precioso_bloque_de_formato %} {% endblock %}
         </section>
 
         <footer>
