--- a/movements/templates/movementsList.html
+++ b/movements/templates/movementsList.html
@@ -2,23 +2,29 @@
             
 {% block title %} Romanos {% endblock %}
 
-{% block content %}
-    <h1>Ingresos Mensuales <a href="creaalta">Nuevo</a></h1>
+{% block mi_precioso_bloque_de_formato %}
+    <h1>Ingresos Mensuales</h1>
     <table>
         <tr>
             <th>Fecha</th>
             <th>Concepto</th>
             <th>Importe/Guita</th>
         </tr>
+    
     {% for registro in datos %}
         <tr>
             <td>{{registro[0]}}</td>
             <td>{{registro[1]}}</td>
             <td>{{registro[2]}}</td>
+            <td><a href="modifica/{{registro[3]}}">&#9998;</a> <a href="delete/{{registro[3]}}">&#10006;</a></td>
         </tr>
+
     {% endfor %}
         <tr>
             <td colspan="3">Total: {{total}}€</td>
         </tr>
     </table>
+    <a href="creaalta">Nuevo</a>
+    
 {% endblock %}
+
